# terminus-outcome

./: .gitignore  CMakeLists.txt  README.md  changelog.md  conanfile.py
docs/: CMakeLists.txt  Doxyfile  developers.md
include/terminus/: error.hpp  outcome.hpp
include/terminus/error/: ErrorCode.hpp  Error_Category.hpp  Error_Code.hpp  error_category.hpp
include/terminus/outcome/: Error.hpp  ErrorCategory.hpp  Error_Category.hpp  Optional.hpp  Result.hpp  macros.hpp  result.hpp
scripts/: build-cmake.sh
templates/: Exports.hpp.in  exports.hpp.in
test/package/: .gitignore  CMakeLists.txt  conanfile.py  example.cpp
test/unit/: CMakeLists.txt  TEST_Error.cpp  TEST_Optional.cpp  TEST_Result.cpp  TEST_error.cpp  TEST_error_code.hpp  TEST_result.cpp  TestErrorCode.hpp
tests/unit_tests/: TEST_Outcome.cpp
